# HelloCrypto

./: .env.example  .gitignore  BACKTEST_LOG.md  CLAUDE.md  Makefile  Procfile  README.md  config.json  conftest.py  docker-compose.yml  get_google_llm_versions.py  pyproject.toml  requirements.txt  setup.sh  vercel.json
.claude/skills/: bench.md  clean.md  db-review.md
.github/workflows/: ci.yml  runner.yml
dashboard/: Dockerfile  app.py
dashboard/templates/: login.html
db/: backfill_trade_qty.py  clean.py  coin_tiers.py  snapshots.py  store.py
deploy/: cloudbuild.yaml  cloudrun.env.example  deploy.sh
eval/: playbook.json
eval/reports/: CHANGELOG.md  champion.json  v1_lean_aggressive__synthetic_demo__20260523_094028.json  v1_lean_baseline__synthetic_demo__20260523_093950.json
eval/reports/bench/: bench_20260525_164010.json  bench_20260525_164611.json  bench_20260525_194449.json  bench_20260525_214756.json  bench_20260526_083057.json  bench_20260526_084628.json  bench_20260527_065910.json
eval/scenarios/: synthetic_demo.json
eval/scenarios/holdout/bear_2022/: holdout_3ac_collapse_7d.json  holdout_bear_grind_30d.json  holdout_luna_crash_7d.json
eval/scenarios/holdout/compact/: holdout_bull_to_correction_1d.json  holdout_fear_bear_1d.json  holdout_greed_bull_1d.json  holdout_neutral_bull_1d.json
eval/scenarios/holdout/full/: holdout_bull_to_correction_7d.json  holdout_fear_bear_7d.json  holdout_greed_bull_7d.json  holdout_neutral_bull_7d.json
hellocrypto/: __init__.py  agent.py  alerts.py  api.py  backtest.py  binance_sync.py  coin_tiers.py  cron.py  dashboard.py  deciders.py  llm.py  prompts.py  ratelimit.py  simulation.py  strategy.py  trading.py
hellocrypto/eval/: __init__.py  active_patterns.py  behavior.py  bench.py  bench_diff.py  capture.py  journal.py  llm_cache.py  metrics.py  patterns.py  playbook.py  progress.py  runner.py  scenario.py
hellocrypto/routes/: __init__.py  agent.py  analysis.py  backtest.py  config.py  cron.py  logs.py  performance.py  portfolio.py  shared.py  simulation.py
runner/: Dockerfile  main.py
scripts/: add_coin.py  backfill_binance.py  bench_start_variance.py  build_holdout_scenarios.py  compare.py  compute_coin_tiers.py  enable_rls.sql  eval.py  init_db.py  propose.py  snapshot_scenario.py
scripts/git-hooks/: pre-commit
static/js/: analytics.js  backtest.js  main.js  market.js  orders.js
templates/: backtest.html  index.html  market.html
tests/: test_agent_cycle.py  test_api_orders.py  test_binance_sync.py  test_config.py  test_deciders.py  test_eval_cache.py  test_eval_metrics.py  test_eval_runner.py  test_prompts.py  test_ratelimit.py  test_strategy.py  test_trading.py
