[tool.poetry]
name        = "hellocrypto"
version     = "0.1.0"
description = "AI-powered crypto trading agent on Binance"
readme      = "README.md"
packages    = [{ include = "hellocrypto" }, { include = "db" }, { include = "dashboard" }]

[tool.poetry.dependencies]
python        = "^3.11"
anthropic     = ">=0.40"
flask         = ">=3.0"
requests      = ">=2.31"
python-dotenv = ">=1.0"
google-genai  = { version = ">=1.0", optional = true }
google-api-core = { version = ">=2.0", optional = true }
google-auth-oauthlib = ">=1.0"
google-cloud-firestore = { version = ">=2.13", optional = true }
psycopg2-binary        = { version = ">=2.9", optional = true }
gunicorn = ">=22.0.0"

[tool.poetry.extras]
gemini    = ["google-genai", "google-api-core"]
gcp       = ["google-cloud-firestore"]
postgres  = ["psycopg2-binary"]

[tool.poetry.scripts]
agent     = "hellocrypto.agent:run_agent"
dashboard = "dashboard.app:main"
backtest  = "hellocrypto.backtest:main"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
