[tool.poetry]
name        = "hellocrypto"
version     = "0.1.0"
description = "AI-powered crypto trading agent on Binance"
readme      = "README.md"
packages    = [{ include = "hellocrypto" }, { include = "db" }, { include = "dashboard" }]

[tool.poetry.dependencies]
python        = "^3.11"
anthropic     = ">=0.40"
flask         = ">=3.0"
requests      = ">=2.31"
python-dotenv = ">=1.0"
google-genai  = { version = ">=1.0", optional = true }
google-api-core = { version = ">=2.0", optional = true }
google-auth-oauthlib = ">=1.0"
google-cloud-firestore = { version = ">=2.13", optional = true }
psycopg2-binary        = { version = ">=2.9", optional = true }
gunicorn = ">=22.0.0"
flask-compress = "^1.24"

[tool.poetry.extras]
gemini    = ["google-genai", "google-api-core"]
gcp       = ["google-cloud-firestore"]
postgres  = ["psycopg2-binary"]

[tool.poetry.scripts]
agent     = "hellocrypto.agent:run_agent"
dashboard = "dashboard.app:main"
backtest  = "hellocrypto.backtest:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff   = ">=0.5"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["."]
addopts    = "-q"

[tool.ruff]
line-length    = 110
target-version = "py311"
extend-exclude = ["data"]

[tool.ruff.lint]
# SIM volontairement omis : ses suggestions (contextlib.suppress, ternaires
# imbriqués) sont stylistiques et nuisent à la lisibilité ici.
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501",  # line length — laissé à ruff format si jamais activé
    "E701",  # one-line if (style choisi sur la codebase pour les tables de mapping)
    "E402",  # module imports after sys.path tweak (pattern volontaire en Vercel)
    "E741",  # variable name 'l' — un seul cas, choix lisibilité local
    "B008",  # function call in default arg — patterns Flask/decorator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
